2006-05-13 [wwp]	2.2.0cvs11

	* src/export.c
	* src/import.c
	* src/mainwindow.c
	* src/mbox.c
	* src/summaryview.c
	* src/summaryview.h
		no more silent failures (or at least less ones) when importing
		or exporting from/to mbox. Also start importing/exporting if
		the necessary info is set.

2006-05-13 [wwp]	2.2.0cvs10

	* RELEASE_NOTES
		restored up-to-date release notes.

2006-05-13 [paul]	2.2.0cvs9

	* po/nl.po
	* po/ru.po
		updated by Tim Dijkstra and Pavlo Bohmat

2006-05-12 [colin]	2.2.0cvs8

	* src/gtk/quicksearch.c
		Add "k" as shortcut for "colorlabel". Patch
		by ath42@users.sf.net.

2006-05-12 [paul]	2.2.0cvs7

	* src/prefs_common.h
	* src/prefs_summaries.c
	* src/summaryview.c
		when entering a folder also allow
		going directly to first Marked message

2006-05-12 [paul]	2.2.0cvs6

	* src/summaryview.c
		always obey 'confirm before marking all
		mails read' option

2006-05-12 [paul]	2.2.0cvs5

	* src/textview.c
		make Sender fully clickable

2006-05-12 [colin]	2.2.0cvs4

	* src/compose.c
	* src/compose.h
		Let From be editable
	* src/main.c
	* src/mh.c
		Full support of .mh_sequences' Unseen seq

2006-05-12 [colin]	2.2.0cvs3

	* src/folder.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/messageview.c
	* src/prefs_spelling.c
	* src/procheader.c
	* src/procmsg.c
	* src/procmsg.h
	* src/summaryview.c
	* src/toolbar.c
	* src/toolbar.h
		Add contextual menu on Compose toolbar
                button. Fixes bug #944 (Automatic
                addresses not applied when changing account
                from compose window)
                add Mailing List support
                based on the old 0.6.5claws25 patch by
                Melvin Hadasht, with finishing touches
                by Colin
                Fix "ignore thread" when mails are threaded by
                subject (and weren't ignored although appearing
                in the thread).
                GUI rework.
                Both patches by Pawel.


2006-05-12 [colin]	2.1.1cvs50
